Made an initial upgrade/cleaning run.